--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "short_name": "React App",
   "name": "Create React App Sample",
@@ -18,8 +19,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
+
